# reliability

./: .readthedocs.yaml  README.md  README.rst  generator_test.py  mkdocs.yml  pyproject.toml  pythonpath.py  requirements-dev.txt  requirements.txt
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/guide/: correlation.rst  create.rst  instalacao.rst  instalation.rst  limit.rst  methods.rst  start.rst  variables.rst
examples/adaptative/: adapt-melchers89.py  adapt_example14-6-Ayyub.py  adapt_example7-3.py  adapt_example7-5.py  adapt_example7-6.py  adapt_example7-7.py  adapt_example7-8.py  adapt_teste_beta.py  mcadapt-cubic.py
examples/articles/: 1.1_enhanced.py  1.2_mc.py  1.3_enhanced.py  1.3_mc.py  1.4_enhanced.py  1.4_mc.py  1.5_enhanced.py  1.5_mc.py  2.1_enhanced.py  2.1_mc.py  2.2_enhanced.py  2.3_mc.py  2.4_enhanced.py  3.1_enhanced.py  3.1_mc.py  3.2_enhanced.py  3.2_mc.py  3.3_enhanced.py  3.3_mc.py  3.4_enhanced.py  3.4_mc.py
examples/bucher/: buch_column_1.py  buch_example7-3.py  buch_example7-5.py  buch_example7-6.py  buch_example7-7.py  buch_example7-8.py  buch_example7-9.py  buch_teste_beta.py  mcis-cubic.py
examples/form/: example6-6.py  example7-3.py  example7-4.py  example7-5.py  example7-6.py  example7-7.py  example7-8.py  example7-9.py
examples/monteCarlo/: example6-6.py  example7-3.py  example7-4.py  example7-6.py  example7-7.py  example7-8.py  example7-9.py  mc-G2R.py  mc-Santos_Beck_Stucchi.py  mc-fire.py  mc-hurtado.py  mc-melchers89.py  (+14 more)
src/: __init__.py  correlation.py  main.py  visualize.py
(+335 files in other folders)
