[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability"
dynamic = ["version"]
description = "Python Structural Reliability Analysis"
authors = [
    { name = "Bruno Teixeira Santos", email = "bruno.if@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]

[tool.setuptools.dynamic]
version = {attr = "Reliability.__version__"}