[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability"
version = "0.1.0"
description = "Python Structural Reliability Analysis"
authors = [
    { name = "Bruno Teixeira Santos", email = "bruno.if@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]
